# rust_zero2prod

./: Cargo.toml  Dockerfile  configuration.yaml
.github/workflows/: general.yml
configuration/: local.yaml
scripts/: init_db.sh
src/: configuration.rs  domain.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
