[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# we could use any path here, but we are following the community convention
# we cound specify a library name using "name" field, if unspecified,
# cargo will default to package.name" which is what we want.
path = "src/lib.rs"


# Notice the double square brackets: it's an array in TOML's syntax.
# We can only have one library in a project, but we can have multiple binaries!
# If you want to manage multiple libraries in the same repository
# have a look at the workspace feature - we'll cover it later on.
[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "^4.4.0"
chrono = "0.4.31"
config = "0.13.3"
env_logger = "0.10.0"
help = "0.0.0"
log = "0.4.20"
serde = { version = "1.0.188", features = ["derive"]}
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
tracing = {version = "0.1.37", features = ["log"]}
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.17", features = ["registry", "env-filter"]}
uuid = {version = "1.4.1", features = ["v4"]}
[dependencies.sqlx]
version = "0.7.1"
default-features = false
features = [
    "runtime-tokio",
    "tls-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
]
[dev-dependencies]
once_cell = "1.18.0"
reqwest = "0.11"
# [target.aarch64-apple-darwin] 
# restflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]